[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Enemies/BlobHusk/Shoot.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/BlobHusk/Idle.png" type="Texture" id=2]
[ext_resource path="res://Audio/SE/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Enemies/BlobHusk/Scared.png" type="Texture" id=4]
[ext_resource path="res://Stages/Blobhusk.gd" type="Script" id=5]
[ext_resource path="res://Sprites/gui/enemyhpover.png" type="Texture" id=9]
[ext_resource path="res://Sprites/gui/enemyhpprog.png" type="Texture" id=10]
[ext_resource path="res://Sprites/gui/enemyhpback.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Misc/Hdie.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "die",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "scared",
"speed": 18.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 15 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 335, 58 )

[node name="Bhusk" type="Area2D"]
position = Vector2( 382, 245 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )

[node name="Blobhusk" type="AnimatedSprite" parent="."]
position = Vector2( -2.97301, -4.43238 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="Sounds" type="AudioStreamPlayer2D" parent="Blobhusk"]
volume_db = 8.946
max_distance = 831.0
bus = "SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -9 )
shape = SubResource( 2 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.746
bus = "SFX"

[node name="multihurt" type="Timer" parent="."]
wait_time = 1.301
one_shot = true

[node name="multihurtrepeat" type="Timer" parent="."]
wait_time = 0.133

[node name="EnemHealth" type="TextureProgress" parent="."]
margin_left = -60.1626
margin_top = -65.7838
margin_right = 61.8374
margin_bottom = -32.7838
texture_under = ExtResource( 11 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
tint_progress = Color( 0.996078, 0.0823529, 0.945098, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hptween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -2, 18 )
enabled = true
cast_to = Vector2( -34, 30 )
collision_mask = 2

[node name="HorizDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizDetect"]
position = Vector2( -313, -52 )
shape = SubResource( 13 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="Blobhusk" to="." method="_on_Stickhusk_animation_finished"]
[connection signal="timeout" from="multihurt" to="." method="_on_multihurt_timeout"]
[connection signal="timeout" from="multihurtrepeat" to="." method="_on_multihurtrepeat_timeout"]
[connection signal="area_entered" from="HorizDetect" to="." method="_on_HorizDetect_area_entered"]
